--- a/hotel.html
+++ b/hotel.html
@@ -3,152 +3,155 @@
 <head>
   <meta charset="utf-8">
   <title>Отели</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
-      </a>
-      <ul class="site-navigation">
-        <li>
-          <a href="info.html" class="gen">Информация</a>
-        </li>
-        <li>
-          <a href="PhotoandVideo.html" class="survey">Фото и Видео</a>
-        </li>
-        <li>
-          <a href="Statemap.html" class="card">Карта штата</a>
-        </li>
-        <li>
-          <a class="housing">Гостиницы</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <section class="services">
-    <form class="services-infrastructure">
-      <h2>Инфраструктура:</h2>
-      <input type="checkbox" name="subscribe" id="subscribe-field" checked>
-      <label for="subscribe-field">Бассейн</label>
-      <input type="checkbox">
-      <label for="subscribe-field">Парковка</label>
-      <input type="checkbox">
-      <label for="subscribe-field">WI-FI</label>
-      <h2>Тип жилья:</h2>
-      <input type="checkbox" checked>
-      <label for="subscribe-field">Гостиница</label>
-      <input type="checkbox" checked>
-      <label for="subscribe-field">Мотель</label>
-      <input type="checkbox" checked>
-      <label for="subscribe-field">Апартаменты</label>
-    </form>
-  </section>
-  <main>
-    <h2>Найдено: 3</h2>
-    <p>Сортировать:</p>
-    <ul class="catalog-navigation">
-      <li class="catalog-navigation__item"><a>По цене</a></li>
-      <li>
-        <a href="type_of.html">По типу</a>
-      </li>
-      <li>
-        <a href="rated.html">По рейтингу</a>
-      </li>
-    </ul>
-    <section class="hotels">
-      <h2>Каталог</h2>
-      <ul class="hotels__list">
-        <li class="hotels__item">
-          <div class="hotels__image">
-            <img src="img/hotel-picture1.jpg" width="135" height="90" alt="Amara Resort & Spa">
-          </div>
-          <div class="hotels__info">
-            <a class="hotels__title" href="#">Amara Resort & Spa</a>
-            <div class="hotels__desc">
-              <p class="hotels__type">Гостиница</p>
-              <p class="hotels__price">от 4000 Р.</p>
-            </div>
-            <div class="hotels__buttons">
-              <a href="detail.html" class="detail">Подробнее</a>
-              <a href="reservation.html" class="reservation">Забронировать</a>
-            </div>
-          </div>
-          <div class="hotels__rate">
-            <span class="hotels__rate-star">
-            </span>
-            <p class="hotels__rate-text">Рейтинг: 8,5</p>
-          </div>
-        </li>
-        <li class="hotels__item">
-          <div class="hotels__image">
-            <img src="img/hotel-picture2.png" width="135" height="90" alt="Desert Quail inn">
-          </div>
-          <div class="hotels__info">
-            <a class="hotels__title" href="#">Desert Quail inn</a>
-            <div class="hotels__desc">
-              <p class="hotels__type">Мотель</p>
-              <p class="hotels__price">от 3000 Р.</p>
-            </div>
-            <div class="hotels__buttons">
-              <a href="detail.html" class="detail">Подробнее</a>
-              <a href="reservation.html" class="reservation">Забронировать</a>
-            </div>
-          </div>
-          <div class="hotels__rate">
-            <span class="hotels__rate-star">
-            </span>
-            <p class="hotels__rate-text">Рейтинг: 8,9</p>
-          </div>
-        </li>
-        <li class="hotels__item">
-          <div class="hotels__image">
-            <img src="img/hotel-picture3.png" alt="Villas At Poco Diabolo">
-          </div>
-          <div class="hotels__info">
-            <a class="hotels__title" href="#">Villas At Poco Diabolo</a>
-            <div class="hotels__desc">
-              <p class="hotels__type">Апартаменты</p>
-              <p class="hotels__price">от 2000 Р.</p>
-            </div>
-            <div class="hotels__buttons">
-              <a href="detail.html" class="detail">Подробнее</a>
-              <a href="reservation.html" class="reservation">Забронировать</a>
-            </div>
-          </div>
-          <div class="hotels__rate">
-            <span class="hotels__rate-star">
-            </span>
-            <p class="hotels__rate-text">Рейтинг: 9,2</p>
-          </div>
-        </li>
-      </ul>
+  <div class="container">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
+        </a>
+        <ul class="site-navigation">
+          <li>
+            <a href="info.html" class="gen">Информация</a>
+          </li>
+          <li>
+            <a href="PhotoandVideo.html" class="survey">Фото и Видео</a>
+          </li>
+          <li>
+            <a href="Statemap.html" class="card">Карта штата</a>
+          </li>
+          <li>
+            <a class="housing">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="services">
+      <form class="services-infrastructure">
+        <h2>Инфраструктура:</h2>
+        <input type="checkbox" name="subscribe" id="subscribe-field" checked>
+        <label for="subscribe-field">Бассейн</label>
+        <input type="checkbox">
+        <label for="subscribe-field">Парковка</label>
+        <input type="checkbox">
+        <label for="subscribe-field">WI-FI</label>
+        <h2>Тип жилья:</h2>
+        <input type="checkbox" checked>
+        <label for="subscribe-field">Гостиница</label>
+        <input type="checkbox" checked>
+        <label for="subscribe-field">Мотель</label>
+        <input type="checkbox" checked>
+        <label for="subscribe-field">Апартаменты</label>
+      </form>
     </section>
-  </main>
-  <footer class="main-footer">
-    <p class="main-footer-tag">#VISITSEDONA</p>
-    <ul class="footer-social">
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
-      </li>
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
-      </li>
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
-      </li>
-    </ul>
-    <p class="footer-copyright">
-      <b>website by</b>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
-      </a>
-    </p>
-  </footer>
+    <main>
+      <h2>Найдено: 3</h2>
+      <p>Сортировать:</p>
+      <ul class="catalog-navigation">
+        <li class="catalog-navigation__item"><a>По цене</a></li>
+        <li>
+          <a href="type_of.html">По типу</a>
+        </li>
+        <li>
+          <a href="rated.html">По рейтингу</a>
+        </li>
+      </ul>
+      <section class="hotels">
+        <h2>Каталог</h2>
+        <ul class="hotels__list">
+          <li class="hotels__item">
+            <div class="hotels__image">
+              <img src="img/hotel-picture1.jpg" width="135" height="90" alt="Amara Resort & Spa">
+            </div>
+            <div class="hotels__info">
+              <a class="hotels__title" href="#">Amara Resort & Spa</a>
+              <div class="hotels__desc">
+                <p class="hotels__type">Гостиница</p>
+                <p class="hotels__price">от 4000 Р.</p>
+              </div>
+              <div class="hotels__buttons">
+                <a href="detail.html" class="detail">Подробнее</a>
+                <a href="reservation.html" class="reservation">Забронировать</a>
+              </div>
+            </div>
+            <div class="hotels__rate">
+              <span class="hotels__rate-star">
+              </span>
+              <p class="hotels__rate-text">Рейтинг: 8,5</p>
+            </div>
+          </li>
+          <li class="hotels__item">
+            <div class="hotels__image">
+              <img src="img/hotel-picture2.png" width="135" height="90" alt="Desert Quail inn">
+            </div>
+            <div class="hotels__info">
+              <a class="hotels__title" href="#">Desert Quail inn</a>
+              <div class="hotels__desc">
+                <p class="hotels__type">Мотель</p>
+                <p class="hotels__price">от 3000 Р.</p>
+              </div>
+              <div class="hotels__buttons">
+                <a href="detail.html" class="detail">Подробнее</a>
+                <a href="reservation.html" class="reservation">Забронировать</a>
+              </div>
+            </div>
+            <div class="hotels__rate">
+              <span class="hotels__rate-star">
+              </span>
+              <p class="hotels__rate-text">Рейтинг: 8,9</p>
+            </div>
+          </li>
+          <li class="hotels__item">
+            <div class="hotels__image">
+              <img src="img/hotel-picture3.png" alt="Villas At Poco Diabolo">
+            </div>
+            <div class="hotels__info">
+              <a class="hotels__title" href="#">Villas At Poco Diabolo</a>
+              <div class="hotels__desc">
+                <p class="hotels__type">Апартаменты</p>
+                <p class="hotels__price">от 2000 Р.</p>
+              </div>
+              <div class="hotels__buttons">
+                <a href="detail.html" class="detail">Подробнее</a>
+                <a href="reservation.html" class="reservation">Забронировать</a>
+              </div>
+            </div>
+            <div class="hotels__rate">
+              <span class="hotels__rate-star">
+              </span>
+              <p class="hotels__rate-text">Рейтинг: 9,2</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <p class="main-footer-tag">#VISITSEDONA</p>
+      <ul class="footer-social">
+        <li>
+          <a href="#" class="social-button">
+            <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
+        </li>
+        <li>
+          <a href="#" class="social-button">
+            <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#" class="social-button">
+            <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
+        </li>
+      </ul>
+      <p class="footer-copyright">
+        <b>website by</b>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
+        </a>
+      </p>
+    </footer>
+  </div>
 </body>
 </html>
