--- a/index.html
+++ b/index.html
@@ -3,171 +3,173 @@
 <head>
   <meta charset="utf-8">
   <title>Главная</title>
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
-      </a>
-      <ul class="site-navigation">
+  <div class="container">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
+        </a>
+        <ul class="site-navigation">
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и Видео</a>
+          </li>
+          <li>
+            <a href="Statemap.html">Карта штата</a>
+          </li>
+          <li>
+            <a href="hotel.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="legend">
+        <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
+      </section>
+      <section class="feature">
+        <p class="feature__title">Седонна - небольшой городок в Аризоне,
+          заслуживающий большего!</p>
+        <p class="feature__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+      </section>
+      <section class="main-city">
+        <div class="main-photo">
+          <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
+        </div>
+        <div class="main-sign">
+          <h3>Настоящий городок</h3>
+          <p>— №1 —</p>
+          <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </div>
+      </section>
+      <section class="features">
+        <ul>
+          <li class="feature-home">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!</p>
+          </li>
+          <li class="feature-food">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер,
+              вы не разочаруетесь!</p>
+          </li>
+          <li class="feature-souvenir">
+            <h3>Сувениры</h3>
+            <p>Нетолько китайского, но и местного
+              производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="main-city">
+        <div class="main-photo">
+          <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
+        </div>
+        <div class="main-sign">
+          <h3>Там есть<br>
+            мост дьявола</h3>
+          <p>-№2-</p>
+          <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
+        </div>
+      </section>
+      <section class="main-comfort">
+        <h2>Наши преимущества</h2>
+        <ul>
+          <li>
+            <h3>Небольшая площадь</h3>
+            <p>-№3-</p>
+            <p>все достопримечательности
+              находятся очень близко</p>
+          </li>
+          <li>
+            <h3>Красивая дорога</h3>
+            <p>-№4-</p>
+            <p>Ехать в седонну из лас-вегаса совсем
+              не скучно</p>
+          </li>
+          <li>
+            <h3>Мало туристов</h3>
+            <p>-№5-</p>
+            <p>Большинство едет в гранд каньон
+              и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="map">
+        <h2>Поиск гостиниц</h2>
+        <p class="map__title">Заинтересовались?</p>
+        <p class="map__desc">Укажите предпологаемые даты поездки,
+          и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
+          <h2 class="scan">Поиск гостиницы в Cедоне</h2>
+          <p class="map__item">
+            <label for="arrival__date">
+              Дата заезда:
+            </label>
+            <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017">
+            <button type="button" title="Поле для выбора">
+              <img src="img/calendar.svg" alt="Календарь">
+            </button>
+          </p>
+          <p class="map__item">
+            <label for="departure__date">
+              Дата выезда:
+            </label>
+            <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017">
+            <button type="button" title="Поле для выбора">
+              <img src="img/calendar.svg" alt="Календарь">
+            </button>
+          </p>
+          <p class="map__item">
+            <label for="grown">
+              Взрослые:
+            </label>
+            <button type="button" title="Минус">-</button>
+            <input id="grown" type="text" name="grown" placeholder="2">
+            <button type="button" title="Плюс">+</button>
+          </p>
+          <p class="map__item">
+            <label for="children">
+              Дети:
+            </label>
+            <button type="button" title="Минус">-</button>
+            <input id="children" type="text" name="children" placeholder="0">
+            <button type="button" title="Плюс">+</button>
+          </p>
+          <button class="button" type="submit">Найти</button>
+        </form>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <p class="main-footer-tag">#VISITSEDONA</p>
+      <ul class="footer-social">
         <li>
-          <a href="#" class="gen">Информация</a>
+          <a href="#" class="social-button">
+            <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
         </li>
         <li>
-          <a href="#" class="survey">Фото и Видео</a>
+          <a href="#" class="social-button">
+            <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
         </li>
         <li>
-          <a href="Statemap.html" class="card">Карта штата</a>
-        </li>
-        <li>
-          <a href="hotel.html" class="housing">Гостиницы</a>
+          <a href="#" class="social-button">
+            <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
         </li>
       </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="legend">
-      <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
-    </section>
-    <section class="feature">
-      <p class="headline">Седонна - небольшой городок в Аризоне,
-        заслуживающий большего!</p>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
-    </section>
-    <section class="main-city">
-      <div class="main-photo">
-        <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
-      </div>
-      <div class="main-sign">
-        <h3>Настоящий
-          городок</h3>
-        <p>-№1-</p>
-        <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-      </div>
-    </section>
-    <section class="features">
-      <ul>
-        <li class="feature-home">
-          <h3>Жильё</h3>
-          <p>Рекомендуем пожить в настоящем мотеле,
-            всё как в кино!</p>
-        </li>
-        <li class="feature-food">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер,
-            вы не разочаруетесь!</p>
-        </li>
-        <li class="feature-souvenir">
-          <h3>Сувениры</h3>
-          <p>Нетолько китайского, но и местного
-            производства!</p>
-        </li>
-      </ul>
-    </section>
-    <section class="main-city">
-      <div class="main-photo">
-        <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
-      </div>
-      <div class="main-sign">
-        <h3>Там есть<br>
-          мост дьявола</h3>
-        <p>-№2-</p>
-        <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
-      </div>
-    </section>
-    <section class="main-comfort">
-      <h2>Наши преимущества</h2>
-      <ul>
-        <li>
-          <h3>Небольшая площадь</h3>
-          <p>-№3-</p>
-          <p>все достопримечательности
-            находятся очень близко</p>
-        </li>
-        <li>
-          <h3>Красивая дорога</h3>
-          <p>-№4-</p>
-          <p>Ехать в седонну из лас-вегаса совсем
-            не скучно</p>
-        </li>
-        <li>
-          <h3>Мало туристов</h3>
-          <p>-№5-</p>
-          <p>Большинство едет в гранд каньон
-            и толпится там</p>
-        </li>
-      </ul>
-    </section>
-    <section class="map">
-      <h2>Поиск гостиниц</h2>
-      <p class="map__title">Заинтересовались?</p>
-      <p class="map__desc">Укажите предпологаемые даты поездки,
-        и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
-        <h2 class="scan">Поиск гостиницы в Cедоне</h2>
-        <p class="map__item">
-          <label for="arrival__date">
-            Дата заезда:
-          </label>
-          <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017">
-          <button type="button" title="Поле для выбора">
-            <img src="img/calendar.svg" alt="Календарь">
-          </button>
-        </p>
-        <p class="map__item">
-          <label for="departure__date">
-            Дата выезда:
-          </label>
-          <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017">
-          <button type="button" title="Поле для выбора">
-            <img src="img/calendar.svg" alt="Календарь">
-          </button>
-        </p>
-        <p class="map__item">
-          <label for="grown">
-            Взрослые:
-          </label>
-          <button type="button" title="Минус">-</button>
-          <input id="grown" type="text" name="grown" placeholder="2">
-          <button type="button" title="Плюс">+</button>
-        </p>
-        <p class="map__item">
-          <label for="children">
-            Дети:
-          </label>
-          <button type="button" title="Минус">-</button>
-          <input id="children" type="text" name="children" placeholder="0">
-          <button type="button" title="Плюс">+</button>
-        </p>
-        <button class="button" type="submit">Найти</button>
-      </form>
-    </section>
-  </main>
-  <footer class="main-footer">
-    <p class="main-footer-tag">#VISITSEDONA</p>
-    <ul class="footer-social">
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
-      </li>
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
-      </li>
-      <li>
-        <a href="#" class="social-button">
-          <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
-      </li>
-    </ul>
-    <p class="footer-copyright">
-      <b>website by</b>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
-      </a>
-    </p>
-  </footer>
+      <p class="footer-copyright">
+        <b>website by</b>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
+        </a>
+      </p>
+    </footer>
+  </div>
 </body>
 </html>
