--- a/hotel.html
+++ b/hotel.html
@@ -16,16 +16,16 @@
         </a>
         <ul class="site-navigation">
           <li>
-            <a href="info.html" class="gen">Информация</a>
+            <a href="info.html">Информация</a>
           </li>
           <li>
-            <a href="PhotoandVideo.html" class="survey">Фото и Видео</a>
+            <a href="PhotoandVideo.html">Фото и Видео</a>
           </li>
           <li>
-            <a href="Statemap.html" class="card">Карта штата</a>
+            <a href="Statemap.html">Карта штата</a>
           </li>
           <li>
-            <a class="housing">Гостиницы</a>
+            <a class="housing active">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -52,7 +52,7 @@
       <h2>Найдено: 3</h2>
       <p>Сортировать:</p>
       <ul class="catalog-navigation">
-        <li class="catalog-navigation__item"><a>По цене</a></li>
+        <li class="catalog-navigation__item" class="by__price"><a>По цене</a></li>
         <li>
           <a href="type_of.html">По типу</a>
         </li>
