--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#">Информация</a>
           </li>
           <li>
-            <a href="#">Фото и Видео</a>
+            <a href="#">Фото и видео</a>
           </li>
           <li>
             <a href="Statemap.html">Карта штата</a>
@@ -74,8 +74,8 @@
         </div>
         <div class="main-sign">
           <h3>Там есть<br>
-            мост дьявола</h3>
-          <p>-№2-</p>
+            Мост дьявола</h3>
+          <p>— №2 —</p>
           <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
         </div>
       </section>
@@ -84,19 +84,19 @@
         <ul>
           <li>
             <h3>Небольшая площадь</h3>
-            <p>-№3-</p>
+            <p>— №3 —</p>
             <p>все достопримечательности
               находятся очень близко</p>
           </li>
           <li>
             <h3>Красивая дорога</h3>
-            <p>-№4-</p>
+            <p>— №4 —</p>
             <p>Ехать в седонну из лас-вегаса совсем
               не скучно</p>
           </li>
           <li>
             <h3>Мало туристов</h3>
-            <p>-№5-</p>
+            <p>— №5 —</p>
             <p>Большинство едет в гранд каньон
               и толпится там</p>
           </li>
@@ -106,9 +106,9 @@
         <h2>Поиск гостиниц</h2>
         <p class="map__title">Заинтересовались?</p>
         <p class="map__desc">Укажите предпологаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
-          <h2 class="scan">Поиск гостиницы в Cедоне</h2>
+          <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
           <p class="map__item">
             <label for="arrival__date">
               Дата заезда:
