--- a/hotel.html
+++ b/hotel.html
@@ -25,7 +25,7 @@
             <a href="Statemap.html">Карта штата</a>
           </li>
           <li>
-            <a class="housing active">Гостиницы</a>
+            <a class="housing__active">Гостиницы</a>
           </li>
         </ul>
       </nav>
