--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </li>
       </ul>
       <p class="footer-copyright">
-        <b>website by</b>
+        <b>Website by</b>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
         </a>
