--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
   <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
-        </a>
-        <ul class="site-navigation">
-          <li>
-            <a href="#">Информация</a>
-          </li>
-          <li>
-            <a href="#">Фото и видео</a>
-          </li>
-          <li>
-            <a href="Statemap.html">Карта штата</a>
-          </li>
-          <li>
-            <a href="hotel.html">Гостиницы</a>
-          </li>
-        </ul>
+        <div class="main-navigation-wrapper">
+          <div class="container">
+            <ul class="site-navigation">
+              <li>
+                <a href="info.html">Информация</a>
+              </li>
+              <li>
+                <a href="PhotoandVideo.html">Фото и Видео</a>
+              </li>
+              <a class="main-header-logo">
+                <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
+              </a>
+              <li>
+                <a href="Statemap.html">Карта штата</a>
+              </li>
+              <li>
+                <a href="hotel.html">Гостиницы</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <section class="legend">
         <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
       </section>
@@ -50,7 +54,7 @@
         </div>
       </section>
       <section class="features">
-        <ul>
+        <ul class="features-list">
           <li class="feature-home">
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле,
