--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>Главная</title>
@@ -7,43 +8,40 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div class="container">
-    <header class="main-header">
+    <header class="main-header outline">
       <nav class="main-navigation">
-        <div class="main-navigation-wrapper">
-          <div class="container">
-            <ul class="site-navigation">
-              <li>
-                <a href="info.html">Информация</a>
-              </li>
-              <li>
-                <a href="PhotoandVideo.html">Фото и Видео</a>
-              </li>
-              <a class="main-header-logo">
-                <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
-              </a>
-              <li>
-                <a href="Statemap.html">Карта штата</a>
-              </li>
-              <li>
-                <a href="hotel.html">Гостиницы</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <a class="main-header-logo">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
+        </a>
+        <ul class="site-navigation">
+          <li>
+            <a href="info.html">Информация</a>
+          </li>
+          <li>
+            <a href="PhotoandVideo.html">Фото и Видео</a>
+          </li>
+          <li>
+            <a href="Statemap.html">Карта штата</a>
+          </li>
+          <li>
+            <a href="hotel.html">Гостиницы</a>
+          </li>
+        </ul>
       </nav>
     </header>
-    <main class="container">
-      <section class="legend">
+    <main>
+      <section class="legend outline">
         <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
       </section>
-      <section class="feature">
+      <section class="feature outline">
         <p class="feature__title">Седонна - небольшой городок в Аризоне,
           заслуживающий большего!</p>
         <p class="feature__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
       </section>
-      <section class="main-city">
+      <section class="main-city main-city-right outline">
         <div class="main-photo">
           <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
         </div>
@@ -54,7 +52,7 @@
         </div>
       </section>
       <section class="features">
-        <ul class="features-list">
+        <ul class="features-list outline">
           <li class="feature-home">
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле,
@@ -72,7 +70,7 @@
           </li>
         </ul>
       </section>
-      <section class="main-city">
+      <section class="main-city outline">
         <div class="main-photo">
           <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
         </div>
@@ -84,8 +82,8 @@
         </div>
       </section>
       <section class="main-comfort">
-        <h2>Наши преимущества</h2>
-        <ul>
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="main-comfort-item outline">
           <li>
             <h3>Небольшая площадь</h3>
             <p>— №3 —</p>
@@ -106,13 +104,13 @@
           </li>
         </ul>
       </section>
-      <section class="map">
-        <h2>Поиск гостиниц</h2>
+      <section class="map outline">
+        <h2 class="visually-hidden">Поиск гостиниц</h2>
         <p class="map__title">Заинтересовались?</p>
         <p class="map__desc">Укажите предпологаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
         <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
-          <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
           <p class="map__item">
             <label for="arrival__date">
               Дата заезда:
@@ -151,7 +149,7 @@
         </form>
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer outline">
       <p class="main-footer-tag">#VISITSEDONA</p>
       <ul class="footer-social">
         <li>
@@ -176,4 +174,5 @@
     </footer>
   </div>
 </body>
+
 </html>
